syntax = "proto3";
package schema.v2;

message BusinessLogicGroupSyncResponse {
	int32 project_generate_queue_id = 1;
	string message = 2;
	Status status = 3;
	int32 token_usage = 4;
  	repeated BusinessLogicGroup business_logic_groups = 5;
	enum Status {
		STATUS_UNSPECIFIED = 0;
		STARTED = 1;
		SUCCEEDED = 2;
		FAILED = 3;
	}
}

message BusinessLogicGroup {
  string category = 1;
  repeated string node_ids = 2;
}

message BusinessLogicGroupSync {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  repeated BusinessLogicNames business_logics = 3;
  string master_language_code = 5;
  repeated string existing_categories = 6;
}

message BusinessLogicNames {
	string name = 1;
	string node_id = 2;
}
