syntax = "proto3";
package schema.v2;

import "v2/block.proto";

message ProjectFigmaImportRequest {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;
	string access_token = 3;
	string node_ids = 4;
	string file_key = 5;
}

message ProjectFigmaImportResponse {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;
  Module module = 3;
	Status status = 4;
	int32 token_usage = 5;
  repeated Block use_case_blocks = 6;

	enum Module {
		FIGMA_TO_NATURAL_LANGUAGE = 0;
	}

	enum Status {
		SUCCEEDED = 0;
		FAILED = 1;
	}
}
